--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^17.2.3",
     "ejs": "^3.1.10",
     "express": "^5.2.1",
+    "express-ejs-layouts": "^2.5.1",
     "jsonwebtoken": "^9.0.3",
     "sqlite3": "^5.1.7"
   },
